--- a/src/main/resources/templates/CreateProduct.html
+++ b/src/main/resources/templates/CreateProduct.html
@@ -23,16 +23,19 @@
             class="form-control mb-4 col-4"
             id="nameInput"
             placeholder="Enter product' name"
+            required
           />
         </div>
         <div class="form-group">
           <label for="quantityInput">Quantity</label>
           <input
             th:field="*{productQuantity}"
-            type="text"
+            type="number"
             class="form-control mb-4 col-4"
+            min="1"
             id="quantityInput"
             placeholder="Enter product' name"
+            required
           />
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
