feat: Adding deletion feature

--- a/src/main/resources/templates/CreateProduct.html
+++ b/src/main/resources/templates/CreateProduct.html
@@ -34,7 +34,7 @@
             class="form-control mb-4 col-4"
             min="1"
             id="quantityInput"
-            placeholder="Enter product' name"
+            placeholder="Enter product' quantity"
             required
           />
         </div>
