--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -20,14 +20,28 @@
       <table border="1" class="table table-striped table-responsive-md">
         <thead>
           <tr>
+            <th scope="col">Product ID</th>
             <th scope="col">Product Name</th>
             <th scope="col">Quantity</th>
+            <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr th:each="product: ${products}">
+            <td th:text="${product.productId}"></td>
             <td th:text="${product.productName}"></td>
             <td th:text="${product.productQuantity}"></td>
+            <td>
+              <a
+                th:href="@{'/product/edit/' + ${product.productId}}"
+                class="btn btn-primary btn-sm"
+                >Edit</a
+              >
+              <button
+                th:onclick="deleteProduct([[${product.productId}]])"
+                class="btn btn-danger btn-sm"
+                >Delete</button>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -38,5 +52,21 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script>
+      function deleteProduct(productId) {
+        if (confirm('Are you sure you want to delete this product?')) {
+          fetch('/product/delete/' + productId, {
+            method: 'DELETE',
+          })
+            .then((response) => {
+              if (response.ok) {
+                window.location.reload();
+              } else {
+                alert('Error occurred while deleting the product');
+              }
+            });
+        }
+      }
+    </script>
   </body>
 </html>
