feat: Added testing for create product page

--- a/src/main/resources/templates/CreateProduct.html
+++ b/src/main/resources/templates/CreateProduct.html
@@ -38,7 +38,9 @@
             required
           />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="submit-btn" class="btn btn-primary">
+          Submit
+        </button>
       </form>
     </div>
 
