--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -29,8 +29,8 @@
         <tbody>
           <tr th:each="product: ${products}">
             <td th:text="${product.productId}"></td>
-            <td th:text="${product.productName}"></td>
-            <td th:text="${product.productQuantity}"></td>
+            <td id="productName" th:text="${product.productName}"></td>
+            <td id="productQuantity" th:text="${product.productQuantity}"></td>
             <td>
               <a
                 th:href="@{'/product/edit/' + ${product.productId}}"
@@ -40,7 +40,9 @@
               <button
                 th:onclick="deleteProduct([[${product.productId}]])"
                 class="btn btn-danger btn-sm"
-                >Delete</button>
+              >
+                Delete
+              </button>
             </td>
           </tr>
         </tbody>
@@ -54,17 +56,16 @@
     ></script>
     <script>
       function deleteProduct(productId) {
-        if (confirm('Are you sure you want to delete this product?')) {
-          fetch('/product/delete/' + productId, {
-            method: 'DELETE',
-          })
-            .then((response) => {
-              if (response.ok) {
-                window.location.reload();
-              } else {
-                alert('Error occurred while deleting the product');
-              }
-            });
+        if (confirm("Are you sure you want to delete this product?")) {
+          fetch("/product/delete/" + productId, {
+            method: "DELETE",
+          }).then((response) => {
+            if (response.ok) {
+              window.location.reload();
+            } else {
+              alert("Error occurred while deleting the product");
+            }
+          });
         }
       }
     </script>
